--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon app.js",
+
+    "start": "node app.js"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   },
   "keywords": [],
   "author": "",
