--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "nodemon app.js",
-
     "start": "node app.js"
   },
   "optionalDependencies": {
-    "fsevents": "*"
+    "fsevents": "^2.3.2"
   },
   "keywords": [],
   "author": "",
